--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,6 @@ python/peacock/tests/postprocessor_tab/TestPostprocessorPluginManager_test_scrip
 !python/peacock/tests/**/input/*.*
 peacock_tmp_diff.exo
 *.e.diff
+
+# MATLAB autosave files
+*.asv
